# rmc_glim

./: .gitattributes  .gitignore  CLAUDE.md  DOCKER_PLAN.md  PRESENTATION_STYLE.md  README.md  imgui.ini
glim_test/: package.xml  setup.cfg  setup.py
glim_test/POI_Poses/: glim_bag_test_20260513_131336_20260513_150532.yaml
glim_test/config/: README.md
glim_test/config/gpu/: config.json  config_sensors.json
glim_test/config/lidar_only/: config.json
glim_test/glim_test/: README.md  convert_map.py  pcd_publisher.py  poi_selector.py
glim_test/launch/: glim_test.launch.py  view_map.launch.py
glim_test/maps/: odom_lidar.txt
glim_test/maps/000002/: data.txt
glim_test/maps/000003/: data.txt
glim_test/maps/000004/: data.txt
glim_test/maps/000005/: data.txt
glim_test/maps/000006/: data.txt
glim_test/maps/000007/: data.txt
glim_test/maps/000009/: data.txt
glim_test/maps/000010/: data.txt
glim_test/maps/000011/: data.txt
glim_test/maps/000012/: data.txt
glim_test/maps/000013/: data.txt
glim_test/maps/000014/: data.txt
glim_test/maps/000017/: data.txt
glim_test/maps/000021/: data.txt
glim_test/maps/000022/: data.txt
glim_test/maps/000024/: data.txt
glim_test/maps/000026/: data.txt
glim_test/maps/000028/: data.txt
glim_test/maps/000029/: data.txt
glim_test/maps/000035/: data.txt
glim_test/maps/000036/: data.txt
glim_test/maps/000039/: data.txt
glim_test/maps/bag_test_20260513_131336/: glim_2d_map.yaml  graph.txt  odom_imu.txt  odom_lidar.txt  traj_imu.txt  traj_lidar.txt
glim_test/rviz_config/: glim_ros.rviz  view_map.rviz
(+142 files in other folders)
