<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim_test</name>
  <version>0.0.1</version>
  <description>GLIM quickstart test — OS1-128 bag playback with GLIM SLAM</description>
  <maintainer email="agm.musalami@gmail.com">Abdullah</maintainer>
  <license>MIT</license>

  <exec_depend>glim_ros</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
